@@ -167,8 +167,8 @@ public class DescribeStreamsGroupTest {
 
     @Test
     public void testDescribeStreamsGroupWithStateOption() throws Exception {
-        final List<String> expectedHeader = Arrays.asList("GROUP", "COORDINATOR", "(ID)", "STATE", "#MEMBERS");
-        final Set<List<String>> expectedRows = Set.of(Arrays.asList(APP_ID, "", "", "Stable", "2"));
+        final List<String> expectedHeader = List.of("GROUP", "COORDINATOR", "(ID)", "STATE", "#MEMBERS");
+        final Set<List<String>> expectedRows = Set.of(List.of(APP_ID, "", "", "Stable", "2"));
         // The coordinator is not deterministic, so we don't care about it.
         final List<Integer> dontCares = List.of(1, 2);
         final String[] args = new String[]{"--bootstrap-server", bootstrapServers, "--describe", "--state", "--group", APP_ID};
@@ -179,8 +179,8 @@ public class DescribeStreamsGroupTest {
 
     @Test
     public void testDescribeStreamsGroupWithStateAndVerboseOptions() throws Exception {
-        final List<String> expectedHeader = Arrays.asList("GROUP", "COORDINATOR", "(ID)", "STATE", "GROUP-EPOCH", "TARGET-ASSIGNMENT-EPOCH", "#MEMBERS");
-        final Set<List<String>> expectedRows = Set.of(Arrays.asList(APP_ID, "", "", "Stable", "3", "3", "2"));
+        final List<String> expectedHeader = List.of("GROUP", "COORDINATOR", "(ID)", "STATE", "GROUP-EPOCH", "TARGET-ASSIGNMENT-EPOCH", "#MEMBERS");
+        final Set<List<String>> expectedRows = Set.of(List.of(APP_ID, "", "", "Stable", "3", "3", "2"));
         // The coordinator is not deterministic, so we don't care about it.
         final List<Integer> dontCares = List.of(1, 2);
 
@@ -296,7 +296,7 @@ public class DescribeStreamsGroupTest {
     private static Topology topology(String inputTopic, String outputTopic) {
         final StreamsBuilder builder = new StreamsBuilder();
         builder.stream(inputTopic, Consumed.with(Serdes.String(), Serdes.String()))
-            .flatMapValues(value -> Arrays.asList(value.toLowerCase(Locale.getDefault()).split("\\W+")))
+            .flatMapValues(value -> List.of(value.toLowerCase(Locale.getDefault()).split("\\W+")))
             .groupBy((key, value) -> value)
             .count()
             .toStream().to(outputTopic, Produced.with(Serdes.String(), Serdes.Long()));
@@ -352,25 +352,25 @@ public class DescribeStreamsGroupTest {
                 String[] lines = output.split("\n");
                 if (lines.length == 1 && lines[0].isEmpty()) lines = new String[]{};
 
-                if (lines.length == 0) return false;
-                List<String> header = Arrays.asList(lines[0].split("\\s+"));
-                if (!expectedHeader.equals(header)) return false;
+            if (lines.length == 0) return false;
+            List<String> header = List.of(lines[0].split("\\s+"));
+            if (!expectedHeader.equals(header)) return false;
 
-                Set<List<String>> groupDesc = Arrays.stream(Arrays.copyOfRange(lines, 1, lines.length))
-                    .map(line -> Arrays.asList(line.split("\\s+")))
-                    .collect(Collectors.toSet());
-                if (groupDesc.size() != expectedRows.size()) return false;
-                // clear the dontCare fields and then compare two sets
-                return expectedRows
-                    .equals(
-                        groupDesc.stream()
-                            .map(list -> {
-                                List<String> listCloned = new ArrayList<>(list);
-                                dontCareIndices.forEach(index -> listCloned.set(index, ""));
-                                return listCloned;
-                            }).collect(Collectors.toSet())
-                    );
-            }, () -> String.format("Expected header=%s and groups=%s, but found:%n%s", expectedHeader, expectedRows, out.get()));
+            Set<List<String>> groupDesc = Arrays.stream(Arrays.copyOfRange(lines, 1, lines.length))
+                .map(line -> List.of(line.split("\\s+")))
+                .collect(Collectors.toSet());
+            if (groupDesc.size() != expectedRows.size()) return false;
+            // clear the dontCare fields and then compare two sets
+            return expectedRows
+                .equals(
+                    groupDesc.stream()
+                        .map(list -> {
+                            List<String> listCloned = new ArrayList<>(list);
+                            dontCareIndices.forEach(index -> listCloned.set(index, ""));
+                            return listCloned;
+                        }).collect(Collectors.toSet())
+                );
+        }, () -> String.format("Expected header=%s and groups=%s, but found:%n%s", expectedHeader, expectedRows, out.get()));
         } finally {
             Exit.resetExitProcedure();
         }
@@ -393,9 +393,9 @@ public class DescribeStreamsGroupTest {
                 String[] lines = output.split("\n");
                 if (lines.length == 1 && lines[0].isEmpty()) lines = new String[]{};
 
-                if (lines.length == 0) return false;
-                List<String> header = Arrays.asList(lines[0].split("\\s+"));
-                if (!expectedHeader.equals(header)) return false;
+            if (lines.length == 0) return false;
+            List<String> header = List.of(lines[0].split("\\s+"));
+            if (!expectedHeader.equals(header)) return false;
 
                 Map<String, Set<List<String>>> groupdescMap = splitOutputByGroup(lines);
 
@@ -435,7 +435,7 @@ public class DescribeStreamsGroupTest {
             if (lines[i].replaceAll(" ", "").equals(headerLine) || i == lines.length - 1) {
                 if (i == lines.length - 1) i++;
                 Set<List<String>> groupDesc = Arrays.stream(Arrays.copyOfRange(lines, j, i))
-                    .map(line -> Arrays.asList(line.split("\\s+")))
+                    .map(line -> List.of(line.split("\\s+")))
                     .collect(Collectors.toSet());
                 groupdescMap.put(groupName, groupDesc);
                 if (i + 1 < lines.length) {
